--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Lei (Liora) Lei"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Hong Kong"
+  employer         : "Hong Kong Polytechnic University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "lei-liora.lei@connect.polyu.hk" 
 
   # Academic websites
   academia         : # URL
