--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,11 @@ main:
   # - title: "Talks"
   #  url: /talks/   
 
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #  url: /publications/
+
+  - title: "Presentation"
+    url: /presentation/    
 
   - title: "Teaching"
     url: /teaching/    
