--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "liora-lei/Lei-Lei"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Personal Image2a.jpg"
   name             : "Lei (Liora) Lei"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate in Finance"
