--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/lei-lei-bb1a5a295/"
+  linkedin         : "lei-lei-bb1a5a295/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -77,12 +77,6 @@ author:
   xing             : # Username
   youtube          : # Username
   zhihu            : # Username
-
-  # ✅ 新增：兼容 Minimal Mistakes 的 links 数组（保留你现有字段不变）
-  links:
-    - label: LinkedIn
-      icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/lei-lei-bb1a5a295/"
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
@@ -353,5 +347,4 @@ tag_archive:
 #   permalinks:
 #     category: /categories/:name/
 #     tag: /tags/:name/
-
 
